# evolutionsim

./: README.md  main.py  pyproject.toml  setup.py
docs/: Roadmap.xlsx
docs/old/: GUI.xlsx  application_old.py  gui test.py
docs/old/archive_0/: Programs.py  Size calculations.xlsx
docs/old/archive_1/: Ticker.py  genetic_algorithm.py
docs/old/archive_2/: x_Bots.py  x_Generation.py
docs/old/archive_5/: NEW_geometry.py  OLD_bots.py  OLD_sensors.py
docs/old/archive_6/: genetic_algorithm.py
docs/old/archive_x_prototype/: Autopilot.py  Color.py  GA.py  Interface.py  NeuralNetwork.py  Sensors.py  Simulation.py  SimulationOLD.py  Tools.py  Wall.py  application.py  applicationOLD.py  environment.py  genetic_algorithm.py  run.bat
docs/old/archive_x_prototype/genomes/: gen1.txt
docs/old/archive_x_prototype/pygame_plot/: plot.py  plotdraw.py
docs/old/archive_x_shapely/: _testing.py  analysis.py  application.py  bots.py  genetic_algorithm.py  interface.py  main.py  neural_network.py  objects.py  sensors.py  tools.py
docs/old/archive_x_shapely/excel/: genome_size.xlsx
docs/old/archive_x_shapely/genomes/: HerbivorePopulation_G100I40T300.txt  HerbivorePopulation_G100I60T300.txt  HerbivorePopulation_G100I80T300.txt  HerbivorePopulation_G1I40T300.txt  HerbivorePopulation_G1I60T300.txt  HerbivorePopulation_G1I80T300.txt  (+1 more)
docs/old/fridge/: tools.py
genomes/: HerbivorePopulation_G500I70T500.txt
notebooks/: test.ipynb
src/evolutionsim/: analysis.py  application.py  bots.py  interface.py  main.py  objects.py  sensors.py  simulation.py
(+14 files in other folders)
