[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolutionsim"
version = "0.1.0"
description = "Experiments with GA optimization of neural networks in a simulated environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "algorithms",
    "matplotlib>=3.9.3",
    "numpy>=2.4.2",
    "pygametools",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
algorithms = { path = "../algorithms", editable = true }
pygametools = { path = "../pygametools", editable = true }